# ChangeLog for media-gfx/psplash
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jun 2010; James Rowe <jnrowe@gmail.com> -psplash-0.1.ebuild:
  Removed obsolete ebuild.

  19 Mar 2010; James Rowe <jnrowe@gmail.com> psplash-0.1_p20090528.ebuild:
  Keyworded x86.

  19 Mar 2010; James Rowe <jnrowe@gmail.com> psplash-0.1_p20090528.ebuild:
  Keyworded amd64.

  17 Feb 2010; James Rowe <jnrowe@gmail.com> psplash-0.1.ebuild:
  Install README.

*psplash-0.1_p20090528 (17 Feb 2010)

  17 Feb 2010; James Rowe <jnrowe@gmail.com> +psplash-0.1_p20090528.ebuild:
  Added snapshot ebuild.

  12 Feb 2010; James Rowe <jnrowe@gmail.com> psplash-0.1.ebuild:
  Keyworded x86.

  12 Feb 2010; James Rowe <jnrowe@gmail.com> psplash-0.1.ebuild:
  Keyworded amd64.

*psplash-0.1 (13 Jan 2010)

  13 Jan 2010; James Rowe <jnrowe@gmail.com> +psplash-0.1.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
