@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST psplash-0.1_p20090528.tar.bz2 42859 RMD160 d88723a0cfd28fdc921aca6c037b7f51b0b8b1c0 SHA1 b2ab19cb7eec3d3855fdead9a008e7a92f9a0343 SHA256 f4dab64a53351d2976b530deb135a52f38c262a5f2e9de9df66f79b1a1858452
-EBUILD psplash-0.1_p20090528.ebuild 668 RMD160 d8a3541cc8a449a96326c68ace0e992216e689eb SHA1 e9d9747e73d90ecddb67db8656e4123686d19bfa SHA256 099a1309d8b06a19c2cf4527850e394f6f3b3e143fe3198475ef066546d74003
-MISC ChangeLog 929 RMD160 7604302c282bf650dffe045e286c75bf93ae534b SHA1 7034a1bb5687847fa22a3718ee0d4e7ea7b7b962 SHA256 846861c79f4c4507676dc9168bfb5e0eb3424746329e1c16b4402af52dd97d35
+EBUILD psplash-0.1_p20090528.ebuild 608 RMD160 a80eae6007f2517bb6d03933ad609feb6db93b61 SHA1 d01c5951405e14756c3e5b8f2bc716a4e74b07ac SHA256 27a327b678f9ef2911400611ce1a1841fdbe72952c55914e72dce8dc95072810
+MISC ChangeLog 1051 RMD160 6d45a49eb0bcbbc301749e7fbb8a45e5b913398e SHA1 8bfcfdae76826cebcf61129aa6b718c45ef9d5d1 SHA256 d675b07dc13147cf225bcb74e4f2c951c9a3b375eda74efcd8122d55c8cba470
 MISC metadata.xml 842 RMD160 2c0b101da71ef12f854df46f366712c35d716b3c SHA1 78b4f13c0426cacd8a24d57047e9db3bdaa294c5 SHA256 3079ff49081453cac1e55854019a2e4e260b7079eb0adfa21ebe5c5bc05f37d8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkwFpvYACgkQzJrj3cAXR0kNZwCgtlXChFJ0jQtQsE+ZUUdHI1p7
-URYAoI7FX9r0SNePcShbri66gnUbByAU
-=UOhc
+iEYEARECAAYFAkwQWAIACgkQzJrj3cAXR0kjFgCgnCdwK+J0fjcnCcnat6Gc4V/9
+M28AmgJXpjEcIHThizYkL7RH4X5kwjWC
+=mYzR
 -----END PGP SIGNATURE-----
